tests/miniJava/pos/001237_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( false ) java [ 0 ] = 0 ; } }
