tests/miniJava/neg/000774_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = false ( ; } }
